<!--
  Copyright 2017 realglobe Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>
    <string name="app_name">SugoActorHitoe</string>
    <string name="item_settings">設定</string>
    <string name="item_reset">リセット</string>
    <string name="item_timer_start">タイマースタート</string>
    <string name="item_call">救助要請</string>
    <string name="text_message_warning">異常を検知しました</string>
    <string name="text_counter_prefix">あと</string>
    <string name="text_counter_count">XX</string>
    <string name="text_counter_suffix">秒で救助を要請します</string>
    <string name="button_stop">止める</string>
    <string name="button_call">今すぐ要請する</string>
    <string name="text_message_emergency">緊急事態です</string>
    <string name="text_message_called">救助を要請しました</string>
    <string name="text_heartrate">心拍数:</string>
    <string name="text_heartrate_default">0</string>
    <string name="text_heartrate_unit">bpm</string>
    <string name="item_allow">位置の取得を許可</string>
    <string name="key_delay">delay</string>
    <string name="key_server">server</string>
    <string name="key_timer">timer</string>
    <string name="default_delay">30</string>
    <string name="default_server">https://edac.online/jissho3/sugos/report/</string>
    <string name="default_timer">180</string>
    <string name="key_actor_suffix">actor_suffix</string>
    <string name="default_actor_suffix">1</string>
    <string name="actor_prefix">qq:reporter:</string>
    <string name="module">reporter</string>
    <string name="description">Hitoe の Actor</string>
    <string name="key_hitoe_sensor">hitoe_sensor</string>
    <string name="key_prefix_hitoe_pincode">prefix_hitoe_pincode</string>
    <string name="button_hitoe_setting">心拍センサーと接続</string>
    <string name="button_back">戻る</string>
    <string name="text_hitoe_header">心拍センサーとの接続状態</string>
    <string name="text_hitoe_message">接続を始めます</string>
    <string name="key_report_interval">report_interval</string>
    <string name="default_report_interval">1</string>
    <string name="item_hitoe_settings" type="id">心拍センサー設定</string>
    <string name="button_search">心拍センサーを探し直す</string>
    <string name="text_back_prefix">あと</string>
    <string name="text_back_count_default">0</string>
    <string name="text_back_suffix">秒で自動的に戻ります</string>
</resources>