<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/item_settings"
        android:orderInCategory="100"
        android:title="@string/item_settings" />
    <item
        android:id="@+id/item_allow"
        android:orderInCategory="150"
        android:title="@string/item_allow" />
    <item
        android:id="@+id/item_hitoe_settings"
        android:orderInCategory="150"
        android:title="@string/item_hitoe_settings" />
    <item
        android:id="@+id/item_reset"
        android:orderInCategory="200"
        android:title="@string/item_reset" />
    <item
        android:id="@+id/item_call"
        android:orderInCategory="300"
        android:title="@string/item_call" />
    <item
        android:id="@+id/item_timer_start"
        android:orderInCategory="300"
        android:title="@string/item_timer_start" />
</menu>
