<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2017 realglobe Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/default_delay"
        android:dialogMessage="異常を検知してから救助を要請するまでの時間を秒単位で入力してください"
        android:dialogTitle="通報までの時間（秒）"
        android:key="@string/key_delay"
        android:numeric="integer"
        android:summary="..."
        android:title="通報までの時間（秒）" />

    <EditTextPreference
        android:defaultValue="@string/default_server"
        android:dialogMessage="通報先 sugo-hub の URL を入力してください"
        android:dialogTitle="通報先アドレス"
        android:key="@string/key_server"
        android:summary="..."
        android:title="通報先アドレス" />

    <EditTextPreference
        android:defaultValue="@string/default_report_interval"
        android:dialogMessage="通報先に状態を報告する間隔を秒単位で入力してください"
        android:dialogTitle="報告間隔（秒）"
        android:key="@string/key_report_interval"
        android:numeric="integer"
        android:summary="..."
        android:title="報告間隔（秒）" />

    <EditTextPreference
        android:defaultValue="@string/default_actor_suffix"
        android:dialogMessage="ID を入力してください\nsugo-actor としてのキーは先頭に固定のアクタータグを付けたものになります"
        android:dialogTitle="クライアント ID"
        android:key="@string/key_actor_suffix"
        android:summary="..."
        android:title="クライアント ID" />

    <EditTextPreference
        android:defaultValue="@string/default_timer"
        android:dialogMessage="異常検知イベントを強制的に発生させるまでの秒数を入力してください"
        android:dialogTitle="タイマー（秒）"
        android:key="@string/key_timer"
        android:numeric="integer"
        android:summary="..."
        android:title="タイマー（秒）" />

</PreferenceScreen>